# software-3d-renderer

./: .gitignore  CMakeLists.txt  NOTES.md  compile_commands.json  game.cc  game.h  main.cc
